# ROS_GAME

./: CMakeLists.txt  README.md  package.xml
launch/: game.launch
msg/: user_msg.msg
src/: control_node.py  control_node_pygame.py  game_node.py  info_user.py  result_node.py
srv/: GetUserScore.srv  SetGameDifficulty.srv
