<?xml version="1.0"?>
<package format="2">
  <name>RP_Pons_Laura_Cotobal_Claudia</name>
  <version>0.0.0</version>
  <description>The RP_Pons_Laura_Cotobal_Claudia package</description>

  <maintainer email="100496761@alumnos.uc3m.es">lauraaponss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Add message generation and runtime dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>